# swagger.yml
@@ -115,16 +115,17 @@ paths:
             $ref: "#/definitions/error"
             
             
-  "/ticket/getTicket":
-    post:
+  "/ticket/getTicket/lot/{lotId}":
+    parameters:
+      - type: integer
+        format: int64
+        name: lotId
+        in: path
+        required: true
+    get:
       tags:
         - ticket
       operationId: getTicket
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: "#/definitions/ticket"
       responses:
         200:
           description: returns a ticket 
